# plasma-parallax-wallpaper

./: .editorconfig  CMakeLists.txt  CONTRIBUTORS.md  README.md
package/: metadata.desktop  metadata.json
package/contents/config/: main.xml
package/contents/ui/: AddFileDialog.qml  ConfigImagePicker.qml  ConfigWallpaperDelegate.qml  ImageBackendComponent.qml  ImageBackendComponentCompat.qml  ThumbnailsComponent.qml  WallpaperDelegate.qml  config.qml  main.qml  mask.frag  mask.frag.qsb
